changed hover color

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
 
 .nav-1:hover {
     text-decoration: none;
-    background-color: whitesmoke;
+    background-color: rgb(250, 218, 218);
     color: #265b8c;
     font-size: 1.2rem;
     padding-left: 1%;
@@ -76,7 +76,7 @@
 
 .nav-2:hover {
     text-decoration: none;
-    background-color: whitesmoke;
+    background-color: rgb(250, 218, 218);
     color: #265b8c;
     font-size: 1.2rem;
     padding-left: 1%;
@@ -100,7 +100,7 @@
 
 .nav-3:hover {
     text-decoration: none;
-    background-color: whitesmoke;
+    background-color: rgb(250, 218, 218);
     color: #265b8c;
     font-size: 1.2rem;
     padding-left: 1%;
@@ -124,7 +124,7 @@
 
 .nav-4:hover {
     text-decoration: none;
-    background-color: whitesmoke;
+    background-color: rgb(250, 218, 218);
     color: #265b8c;
     font-size: 1.2rem;
     padding-left: 1%;
@@ -148,7 +148,7 @@
 
 .nav-5:hover {
     text-decoration: none;
-    background-color: whitesmoke;
+    background-color: rgb(250, 218, 218);
     color: #265b8c;
     font-size: 1.2rem;
     padding-left: 1%;
