--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     width: 100%;
     height: 60vh;
     margin-bottom: 10vh;
+    border: 2px solid lightgrey;
 }
 .course-catalog-title-2{
     background-color: #265B8C;
@@ -57,6 +58,7 @@
     width: 100%;
     height: 60vh;
     flex-direction: column;
+    border: 2px solid lightgrey;
 }
 .left-boxes-2{
     display: flex;
@@ -87,25 +89,39 @@
 }
 .flex-parent-2{
     display: flex;
-    border: 5px solid grey;
     clear: left;
 }
 .right-flex-parent-2{
-    border: 5px solid black;
     margin-left: 5%;
     width: 45%;
     float: right;
 }
 .announcements-2{
     height: 15vh;
-    border: 5px solid blue;
+    border: 2px solid lightgrey;
     width: 100%;
 }
 .calender-2{
     height: 40vh;
-    border: 5px solid red;
+    border: 2px solid lightgrey;
     width: 100%;
 }
+.announcements-title-2{
+    background-color: #265B8C;
+    width: 100%;
+    color: white;
+    padding-left: 10px;
+    padding-top: 8px;
+    font-size: 1.2rem;
+}
+.notice-2{
+    padding-top: 4%;
+    margin-left: 5%;
+}
+
+
+
+
 /* #265b8c #D1D1D1 */
 *{
     margin: 0;
